/**
 * LVMd manages logical volumes of an LVM volume group.
 *
 * The protocol consists of two services:
 * - VGService provides information of the volume group.
 * - LVService provides management functions for logical volumes on the volume group.
 */
syntax = "proto3";
package proto;

option go_package = "github.com/topolvm/topolvm/lvmd/proto";

message Empty {}

// Represents a logical volume.
message LogicalVolume {
    string name = 1;          // The logical volume name.
    uint64 size_gb = 2;       // Volume size in GiB.
    uint32 dev_major = 3;     // Device major number.
    uint32 dev_minor = 4;     // Device minor number.
    repeated string tags = 5; // Tags to add to the volume during creation
}

// Represents the input for CreateLV.
message CreateLVRequest {
    string name = 1;              // The logical volume name.
    uint64 size_gb = 2;           // Volume size in GiB.
    repeated string tags = 3;     // Tags to add to the volume during creation
    string device_class = 4;
}

// Represents the response of CreateLV.
message CreateLVResponse {
    LogicalVolume volume = 1;  // Information of the created volume.
}

// Represents the input for RemoveLV.
message RemoveLVRequest {
    string name = 1;       // The logical volume name.
    string device_class = 2;
}

// Represents the input for ResizeLV.
//
// The volume must already exist.
// The volume size will be set to exactly "size_gb".
message ResizeLVRequest {
    string name = 1;       // The logical volume name.
    uint64 size_gb = 2;    // Volume size in GiB.
    string device_class = 3;
}

message CreateSnapRequest {
    string name = 1;              // The snap volume name.
    uint64 size_gb = 2;           // Snap size in GiB.
    repeated string tags = 3;     // Tags to add to the volume during creation
    string device_class = 4;
    string source = 5;            // Source lv of snap
}

message CreateSnapResponse {
    LogicalVolume snap = 1;  // Information of the created snap lv.
}

message RemoveSnapRequest {
    string name = 1;       // The snap volume name.
    string device_class = 2;
}

message RestoreLVRequest {
    string name = 1;              // The snap volume name.
    uint64 size_gb = 2;           // Snap size in GiB.
    repeated string tags = 3;     // Tags to add to the volume during creation
    string device_class = 4;
    string snapshot = 5;          // Source lv of snap
    string volume_mode = 6;       // Volume mode (Filesystem or Block)
    string fs_type = 7;           // Volume filesystem type (if volume_mode is fs, need set this)
}

message RestoreLVResponse {
    LogicalVolume volume = 1;  // Information of the created volume.
}

// Represents the response of GetLVList.
message GetLVListResponse {
    repeated LogicalVolume volumes = 1;  // Information of volumes.
}

// Represents the response of GetFreeBytes.
message GetFreeBytesResponse {
    uint64 free_bytes = 1;  // Free space of the volume group in bytes.
}

message GetLVListRequest {
    string device_class = 1;
}

message GetFreeBytesRequest {
    string device_class = 1;
}

// Represents the stream output from Watch.
message WatchResponse {
    uint64 free_bytes = 1;  // Free space of the default volume group in bytes.
    repeated WatchItem items = 2;
}

message WatchItem {
    uint64 free_bytes = 1;  // Free space of the volume group in bytes.
    string device_class = 2;
    uint64 size_bytes = 3;  // Size of the volume group in bytes.
}

// Service to manage logical volumes of the volume group.
service LVService {
    // Create a logical volume.
    rpc CreateLV(CreateLVRequest) returns (CreateLVResponse);
    // Remove a logical volume.
    rpc RemoveLV(RemoveLVRequest) returns (Empty);
    // Resize a logical volume.
    rpc ResizeLV(ResizeLVRequest) returns (Empty);
    // Create a snapshot volume.
    rpc CreateSnap(CreateSnapRequest) returns (CreateSnapResponse);
    // Remove a snapshot volume.
    rpc RemoveSnap(RemoveSnapRequest) returns (Empty);
    // Restore a volume.
    rpc RestoreLV(RestoreLVRequest) returns (RestoreLVResponse);
}

// Service to retrieve information of the volume group.
service VGService {
    // Get the list of logical volumes in the volume group.
    rpc GetLVList(GetLVListRequest) returns (GetLVListResponse);
    // Get the free space of the volume group in bytes.
    rpc GetFreeBytes(GetFreeBytesRequest) returns (GetFreeBytesResponse);
    // Stream the volume group metrics.
    rpc Watch(Empty) returns (stream WatchResponse);
}
